# simple_vision

./: .gitignore  CMakeLists.txt
src/: Bitmap.cc  Bitmap.h  CommonBitmap.cpp  CommonBitmap.h  lua_util.h  lua_vision.cc  lua_vision.h  vision.h  vision_color.cc  vision_color.h  vision_feature.cc  vision_feature.h  vision_util.h
